modifique extension .heic por .HEIC

--- a/tortas.html
+++ b/tortas.html
@@ -50,7 +50,7 @@
     		<div class="fotosProductos1">
 				<div class="columaUno">
 					<p>TORTA BATATELERIA</p>
-					<img src="media/tortados.heic" alt="torta">
+					<img src="media/tortados.HEIC" alt="torta">
 					<p>TORTA COOKIE</p>
 					<img src="media/tortatres.jpg" alt="torta">
 					<p>CHEESECAKE</p>
@@ -72,7 +72,7 @@
                     <p>LEMONIES</p>
                     <img src="media/lemonies.jpg" alt="lemonies">
                     <p>BROWNIES</p>
-                    <img src="media/brownies2.heic" alt="brownies">
+                    <img src="media/brownies2.HEIC" alt="brownies">
 				</div>
             </div>
         </div>
