agregue sass y animaciones

--- a/chef.html
+++ b/chef.html
@@ -8,6 +8,7 @@
         <meta name="keywords" content="PASTELERIA, TORTAS, DULCES, COMIDA, POSTRES, DESAYUNOS, MERIENDAS">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
         <div id="header" class="container-fluid px-0 header">
@@ -18,10 +19,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                           <a class="nav-link" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                           <a class="nav-link" href="chef.html">Sobre mi<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown">
@@ -43,15 +44,17 @@
         </div>
         <div class="grillaSobreMi">
 			<div class="aboutMe">
-				<p class="tituloProductos">QUIEN SOY</p>
-		 		<p class="parrafo"> Mi nombre es Lucia Piscitelli pero todos me conocen como Lupi o Luchita. Soy Licenciada en 	Comercio Exterior recibida en la UADE y Profesional Gastronomica egresada del Instituto Argentino de Gastronomía. 	Desde muy chica me gusta cocinar pero empecé a formarme profesionalmente en 2018, y en 2019 vió la luz este hermoso proyecto que hoy es <strong>BATATELERIA</strong>. Empecé haciendo tortas para los cumpleaños de mis familiares y amigos, de a poco empezaron a aparecer mis primeros clientes por medio de recomendaciones, mientras continuaba con mi trabajo en relación de dependencia, y finalmente hoy tengo muchos clientes que realizan pedidos cotidianamente y otros tantos nuevos que cada día confian en mi y se suman. <strong>BATATELERIA</strong> es mi lugar, mi espacio, donde puedo ser yo misma y ser creativa. Deseo que todo el mundo encuentre su tan amado trabajo como yo. GRACIAS! </p>
+				<p class="tituloProductos wow animate__animated animate__pulse">QUIEN SOY</p>
+		 		<p class="parrafo wow animate__animated animate__fadeInRight"> Mi nombre es Lucia Piscitelli pero todos me conocen como Lupi o Luchita. Soy Licenciada en 	Comercio Exterior recibida en la UADE y Profesional Gastronomica egresada del Instituto Argentino de Gastronomía. 	Desde muy chica me gusta cocinar pero empecé a formarme profesionalmente en 2018, y en 2019 vió la luz este hermoso proyecto que hoy es <strong>BATATELERIA</strong>. Empecé haciendo tortas para los cumpleaños de mis familiares y amigos, de a poco empezaron a aparecer mis primeros clientes por medio de recomendaciones, mientras continuaba con mi trabajo en relación de dependencia, y finalmente hoy tengo muchos clientes que realizan pedidos cotidianamente y otros tantos nuevos que cada día confian en mi y se suman. <strong>BATATELERIA</strong> es mi lugar, mi espacio, donde puedo ser yo misma y ser creativa. Deseo que todo el mundo encuentre su tan amado trabajo como yo. GRACIAS! </p>
 		 	</div>
-		 	<div class="picAboutMe"><img class="tortaOreo" src="media/oreo.jpg" alt="tortaOreo"></div>
+		 	<div class="picAboutMe wow animate__animated animate__fadeInRight"><img class="tortaOreo" src="media/oreo.jpg" alt="tortaOreo"></div>
 		 	<div class="footer">
 				<p>BATATELERIA. Pastelería artesanal. Ciudad Autonoma de Buenos Aires, Argentina, 2021.</p>
 			</div>
 		</div>
 	 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="js/wow.min.js"></script>
+        <script> new WOW().init();</script>
 	</body>
 </html>
