--- a/batateleriaContacto.html
+++ b/batateleriaContacto.html
@@ -8,6 +8,7 @@
         <meta name="keywords" content="PASTELERIA, TORTAS, DULCES, COMIDA, POSTRES, DESAYUNOS, MERIENDAS">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
         <div id="header" class="container-fluid px-0 header">
@@ -18,7 +19,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                           <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
@@ -36,7 +37,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="preciosTortas.html">Precios</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="batateleriaContacto.html">Contacto <span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
@@ -49,7 +50,7 @@
     			<iframe id="my__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1217774810457!2d-58.42330820662174!3d-34.60108201870397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca6313a5030f%3A0xa9dfe591812d7dcf!2sGuardia%20Vieja%204100-4002%2C%20C1192AAP%20CABA!5e0!3m2!1ses!2sar!4v1624560866898!5m2!1ses!2sar" allowfullscreen="" loading="lazy"></iframe>
     		</div>
     		<div class="grilla__contacto-formulario">
-    			<p class="grilla__contacto-titulo">CONTACTO</p>
+    			<p class="grilla__contacto-titulo  wow animate__animated animate__pulse">CONTACTO</p>
     			<form action="#" method="GET">
     				<p>Dejanos tu mensaje</p>
     				<input type="text" name="nombre" placeholder="Ingresa tu nombre" required>
@@ -72,5 +73,7 @@
     	</div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="js/wow.min.js"></script>
+        <script> new WOW().init();</script>
     </body>
 </html>
