--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="keywords" content="PASTELERIA, TORTAS, DULCES, COMIDA, POSTRES, DESAYUNOS, MERIENDAS">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
         <div id="header" class="container-fluid px-0 header">
@@ -41,7 +42,14 @@
                 </div>
             </nav>  
         </div>
-            <div class="container carrusel">
+        <div class="container wow animate__animated animate__pulse">
+            <div class="text-center py-5">
+                <p class="titulos">BIENVENIDOS A BATATELERIA</p>
+                <h1> Somos una joven pastelería con muchas ganas de llegar a tu mesa y endulzar tus días</h1>
+                <h2> Te invitamos a conocer todos nuestros productos, los que son elaborados con materia prima de primera calidad y especialmente, con mucho amor (¡y mucho dulce de leche!). Hacemos envios por CABA o podes retirar tus pedidos por la zona de Almagro. Esperamos tu pedido! Te prometemos que te va a encantar.</h2>          
+            </div>
+        </div>
+        <div class="container carrusel wow animate__animated animate__fadeInUp">
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -57,7 +65,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="media/tortados.heic" class="d-block w-100" alt="torta">
+                    <img src="media/tortados.HEIC" class="d-block w-100" alt="torta">
                     <div class="carousel-caption d-none d-md-block font-weight-bold">
                         <h5>LA ESPECIALIDAD DE LA CASA</h5>
                         <p>Nuestra clásica torta de Kinder con Nutella</p>
@@ -81,24 +89,19 @@
               </a>
             </div>
         </div>
-        <div class="container">
-            <div class="text-center py-5">
-                <p class="titulos">BIENVENIDOS A BATATELERIA</p>
-                <h1> Somos una joven pastelería con muchas ganas de llegar a tu mesa y endulzar tus días</h1>
-                <h2> Te invitamos a conocer todos nuestros productos, los que son elaborados con materia prima de primera calidad y especialmente, con mucho amor (¡y mucho dulce de leche!). Hacemos envios por CABA o podes retirar tus pedidos por la zona de Almagro. Esperamos tu pedido! Te prometemos que te va a encantar.</h2>          
-            </div>
-        </div>
-        <div class="container row mx-auto novedades">
-            <img id="tortas" src="media/torta.jpg" alt="torta" class="d-block mx-auto mt-3">
-            <img id="tortas" src="media/pastafrola.jpg" alt="torta" class="d-block mx-auto mt-3">
-            <img id="tortas" src="media/tortaamatista.jpg" alt="torta" class="d-block mx-auto mt-3"> 
+        <div class="container row mx-auto novedades"> 
             <p class="novedades__primer-parrafo">Actualmente trabajamos a pedido con 72 hs. de anticipación. Generalmente tenemos cosas ricas en stock los fines de semana. Estate atento a nuestras redes sociales para enterarte! <a class="text-dark font-weight-bold" href="https://www.instagram.com/batateleria/" target="_blank">Ir a nuestra página de Instagram</a></p>
             <h3>Contamos con una carta de productos, sin embargo podes consultarnos por pedidos especiales. Contactate con nosotros, contanos que tipo de festejo tenes (cumpleaños, casamiento, despedidas, bautismos, reuniones sociales, eventos corporativos, entre otros), contanos cuantos invitados son, cual es el presupuesto, elegí la tematica y organizamos lo que quieras!</h3>
+            <img id="tortas" src="media/torta.jpg" alt="torta" class="d-block mx-auto mt-3">
+            <img id="tortas" src="media/pastafrola.jpg" alt="torta" class="d-block mx-auto mt-3">
+            <img id="tortas" src="media/tortaamatista.jpg" alt="torta" class="d-block mx-auto mt-3">
         </div>
         <div class="footer">
             <p>BATATELERIA. Pastelería artesanal. Ciudad Autonoma de Buenos Aires, Argentina, 2021.</p>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="js/wow.min.js"></script>
+        <script> new WOW().init();</script>
     </body>
 </html>
