--- a/preciosTortas.html
+++ b/preciosTortas.html
@@ -8,6 +8,7 @@
         <meta name="keywords" content="PASTELERIA, TORTAS, DULCES, COMIDA, POSTRES, DESAYUNOS, MERIENDAS">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
         <div id="header" class="container-fluid px-0 header">
@@ -18,7 +19,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                           <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
@@ -26,15 +27,14 @@
                         </li>
                         <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="tortas.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Productos<span class="sr-only">(current)</span>
-                          </a>
+                            Productos</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="tortas.html#idTortas">Tortas</a>
                                 <a class="dropdown-item" href="tortas.html#cuadraditos">Cuadrados dulces</a>
                             </div>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="preciosTortas.html">Precios</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="preciosTortas.html">Precios<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="batateleriaContacto.html">Contacto</a>
@@ -44,9 +44,9 @@
             </nav>  
         </div>
 		<div class="precios">
-			<p class="tituloProductos">LISTA DE PRECIOS</p>
+			<p class="tituloProductos wow animate__animated animate__pulse">LISTA DE PRECIOS</p>
 		</div>
-		<div class="fotosPrecios">
+		<div class="fotosPrecios wow animate__animated animate__zoomIn">
 			<img src="media/preciosuno.jpg" alt="precios">
 			<img src="media/preciosdos.jpg" alt="precios">
 			<img src="media/preciostres.jpg" alt="precios">
@@ -57,5 +57,7 @@
 		</div>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="js/wow.min.js"></script>
+        <script> new WOW().init();</script>
 	</body>
 </html>
