--- a/tortas.html
+++ b/tortas.html
@@ -8,6 +8,7 @@
         <meta name="keywords" content="PASTELERIA, TORTAS, DULCES, COMIDA, POSTRES, DESAYUNOS, MERIENDAS">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
         <div id="header" class="container-fluid px-0 header">
@@ -18,13 +19,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                           <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="chef.html">Sobre mi</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item active dropdown">
                             <a class="nav-link dropdown-toggle" href="tortas.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Productos<span class="sr-only">(current)</span>
                             </a>
@@ -45,10 +46,10 @@
         </div>
         <div class="grillaProductos">
     		<div class="productos">
-    			<p class="tituloProductos" id="idTortas">NUESTROS PRODUCTOS</p>
+    			<p class="tituloProductos wow animate__animated animate__pulse" id="idTortas">NUESTROS PRODUCTOS</p>
     		</div>
     		<div class="fotosProductos1">
-				<div class="columaUno">
+				<div class="columaUno wow animate__animated animate__fadeInUpBig">
 					<p>TORTA BATATELERIA</p>
 					<img src="media/tortados.HEIC" alt="torta">
 					<p>TORTA COOKIE</p>
@@ -62,7 +63,7 @@
 				</div>
     		</div>
     		<div class="fotosProductos2">
-				<div class="columnaDos">
+				<div class="columnaDos wow animate__animated animate__fadeInUpBig">
 					<p>ROGEL</p>
 					<img src="media/tortacinco.jpg" alt="torta">
 					<p>CHOCOTORTA</p>
@@ -81,5 +82,7 @@
 		</div>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="js/wow.min.js"></script>
+        <script> new WOW().init();</script>
 	</body>
 </html>
