agregué mixin, anide sass, modifique .heic por jpg y sus tamaños

--- a/tortas.html
+++ b/tortas.html
@@ -51,7 +51,7 @@
     		<div class="fotosProductos1">
 				<div class="columaUno wow animate__animated animate__fadeInUpBig">
 					<p>TORTA BATATELERIA</p>
-					<img src="media/tortados.HEIC" alt="torta">
+					<img src="media/tortados.jpeg" alt="torta">
 					<p>TORTA COOKIE</p>
 					<img src="media/tortatres.jpg" alt="torta">
 					<p>CHEESECAKE</p>
@@ -73,7 +73,7 @@
                     <p>LEMONIES</p>
                     <img src="media/lemonies.jpg" alt="lemonies">
                     <p>BROWNIES</p>
-                    <img src="media/brownies2.HEIC" alt="brownies">
+                    <img src="media/brownies2.jpg" alt="brownies">
 				</div>
             </div>
         </div>
