--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="media/tortados.HEIC" class="d-block w-100" alt="torta">
+                    <img src="media/tortados.jpeg" class="d-block w-100" alt="torta">
                     <div class="carousel-caption d-none d-md-block font-weight-bold">
                         <h5>LA ESPECIALIDAD DE LA CASA</h5>
                         <p>Nuestra clásica torta de Kinder con Nutella</p>
